Bug 152541 - Thin, gray vertical line (field) before all headings after inserting Table of Contents
Summary: Thin, gray vertical line (field) before all headings after inserting Table of...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.3.7.2 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.6.0 target:7.5.1
Keywords: bibisectRequest, regression
Depends on:
Blocks:
 
Reported: 2022-12-16 09:57 UTC by Marc Wuillemin
Modified: 2023-01-25 12:03 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example document (20.61 KB, application/vnd.oasis.opendocument.text)
2022-12-16 09:58 UTC, Marc Wuillemin
Details
Screenshot of the problem (29.36 KB, image/png)
2022-12-16 09:58 UTC, Marc Wuillemin
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Marc Wuillemin 2022-12-16 09:57:23 UTC
Description:
After inserting a Table of Contents in Writer, all of the headings in the document get a thin, gray vertical line places before the first character of the heading.

It appears to be a field as it can be turned on/off with "Field Shadings", but "Field Names" does not show any field name.

Steps to Reproduce:
1. Create a new document
2. Create some headings, using the built-in heading styles
3. Insert a Table of Contents


Actual Results:
Thin gray vertical lines appear in front of each heading.

Expected Results:
No thin gray vertical lines should appear in front of each heading.


Reproducible: Always


User Profile Reset: Yes

Additional Info:
First observed with 7.3.7.
Not observed with 7.2.7. and earlier.

Appears with 7.4.3. after a fresh install in Windows Sandbox.

An example document and screenshot are added, both created in the Windows Sandbox installation.
Comment 1 Marc Wuillemin 2022-12-16 09:58:23 UTC
Created attachment 184177 [details]
Example document
Comment 2 Marc Wuillemin 2022-12-16 09:58:44 UTC
Created attachment 184178 [details]
Screenshot of the problem
Comment 3 Mike Kaganski 2022-12-16 11:36:40 UTC
This is not a bug.
After resolving bug 45589 (in version 7.0 [1]), the bookmarks in the document are shown (subject to the Options->Writer->Formatting Aids->Bookmarks setting). Table of contents creates hidden bookmarks (they are not shown in Navigator), that are used as target position when you Ctrl+Click on the ToC entry. You see those bookmarks.

[1] https://wiki.documentfoundation.org/ReleaseNotes/7.0#Writer
Comment 4 László Németh 2022-12-16 12:40:01 UTC
Writer hides hidden bookmarks, e.g. in Navigator and Insert->Bookmark, so we must do that, too (like MSO does).

The problem is more visible with the I-shape marks.
Comment 5 Marc Wuillemin 2022-12-16 13:09:50 UTC
Thanks for the explanation. I wasn't aware of this feature.
Comment 6 Commit Notification 2023-01-24 08:30:29 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9bec4732915ef408d9a442ccbeb9b582a204b1ca

tdf#152541 sw: don't show hidden __RefHeading__ bookmarks

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2023-01-24 12:58:16 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/f8b7cdd6b017011a286215bde2d5d064048818a6

tdf#152541 sw: don't show hidden __RefHeading__ bookmarks

It will be available in 7.5.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 László Németh 2023-01-24 16:31:32 UTC
@Marc: Thanks for the report!
Comment 9 NISZ LibreOffice Team 2023-01-25 12:03:00 UTC
Verified in: 
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 0bb90afaeb193181d7b98b79e962549d8a1dd85a
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded