tdf#152541 sw: don't show hidden __RefHeading__ bookmarks

In visible bookmark mode, don't show __RefHeading__ bookmarks,
which are hidden in Navigator, too. Note: they are inserted
automatically e.g. with the ToC at the beginning of the headings.

Follow-up to commit 4ce8120f1e53f7b81e653b01d141643013bc69ab
"tdf#45589 sw: create and paint text portions for bookmarks".

Change-Id: Id337613342fa74f5edef59d01349810f9737b62c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/146044
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>